create result table